.feat: add parameter "onlyMine" for get meetings
