# src/server/models/meeting.mjs
@@ -21,6 +21,7 @@ class Meeting {
     price_excl
     latitude
     longitude
+    is_participate
     town = null
 }
 
@@ -112,14 +113,15 @@ Meeting.prototype.Aborted = function(id, reason) {
  * @param includeCompleted Inclus les meetings complet
  * @param includeFinished Inclus les meetings finis
  * @param id L'id d'un meeting
+ * @param onlyMine
  * @returns {Promise<unknown>}
  * @constructor
  */
-Meeting.prototype.Get = function(town = null, idPoliticalParty = null, nir = null, includeAborted = false, includeCompleted = true, includeFinished = false, id = null) {
+Meeting.prototype.Get = function(town = null, idPoliticalParty = null, nir = null, includeAborted = false, includeCompleted = true, includeFinished = false, id = null, onlyMine = false) {
     return new Promise((resolve, reject) => {
         const request = {
-            text: 'SELECT * FROM filter_meeting($1, $2, $3, $4, $5, $6, $7)',
-            values: [town, idPoliticalParty, nir, includeAborted, includeCompleted, includeFinished, id],
+            text: 'SELECT * FROM filter_meeting($1, $2, $3, $4, $5, $6, $7, $8)',
+            values: [nir, town, idPoliticalParty, includeAborted, includeCompleted, includeFinished, id, onlyMine],
         }
         pool.query(request, (error, result) => {
             if (error) {
